# simplepygamemenus-gitrepo

./: .gitignore  MANIFEST.in  README.md  menu.html  pyproject.toml  setup.cfg  setup.py
demos/: simplepygamemenus_demo.py
docs/: documentation.md  index.html
simplepygamemenus/: menu.py
src/simplepygamemenus/: menu.py
