[metadata]
name = simplepygamemenus
version = 0.0.6
author = Leonardo Ferrisi
author_email = ferrisil@union.edu
description = A package for making simple menus for your python games!
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/LeonardoFerrisi/simplepygamemenus-gitrepo
# project_urls =
#     Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
#     repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# [options]
# package_dir = 
#     = simplepygamemenus
# packages = find:
# python_requires = >=3.8

# [options.packages.find]
# where = simplepygamemenus